--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "redis": "0.7.0",
     "node-schedule": "^1.3.0",
     "update-json-file": "^1.1.1",
-    "web-push": "^3.0.0"
+    "web-push": "^3.0.0",
+    "flipkart-affiliate": "^1.1.0",
+    "flipkart-api-affiliate-client": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
